[gd_scene load_steps=16 format=3 uid="uid://bubpqw3sw6cvj"]

[ext_resource type="Script" uid="uid://d0bteqdbb1gsl" path="res://scripts/ui/UILayer.gd" id="1_nbl3c"]
[ext_resource type="Script" uid="uid://ty3s5g4vlkh6" path="res://scripts/ui/GameHUD.gd" id="2_namiw"]
[ext_resource type="Texture2D" uid="uid://b30bjdt6phga" path="res://assets/UI/heart_full.png" id="2_p1e30"]
[ext_resource type="Texture2D" uid="uid://kmijifif5ra1" path="res://assets/UI/playbtn.png" id="3_hhtea"]
[ext_resource type="Texture2D" uid="uid://dthq4jchq0g0x" path="res://assets/UI/heart_empty.png" id="4_1xo4o"]
[ext_resource type="FontFile" uid="uid://ch5rglkjpbnk2" path="res://assets/fonts/Macondo/Macondo-Regular.ttf" id="5_1xo4o"]
[ext_resource type="Texture2D" uid="uid://d3lwpiqw5gj2j" path="res://assets/UI/text_message.png" id="6_6a45y"]
[ext_resource type="Theme" uid="uid://xreggbw3h3yp" path="res://custom_resources/CustomerMessage.tres" id="7_1i1xb"]
[ext_resource type="Texture2D" uid="uid://jamwyueec32p" path="res://assets/UI/interact-btn.png" id="8_bhogs"]
[ext_resource type="Texture2D" uid="uid://bpv7ib6u2578q" path="res://assets/UI/interact-btn-pressed.png" id="9_tqcr1"]
[ext_resource type="LabelSettings" uid="uid://jdv1bfj4iff7" path="res://custom_resources/InteractionButtonLabels.tres" id="10_hhtea"]
[ext_resource type="Texture2D" uid="uid://blhi537qcthh0" path="res://assets/UI/pause_btn.png" id="11_tqcr1"]
[ext_resource type="Texture2D" uid="uid://2n1ol4pwkj0p" path="res://assets/backgrounds/level1.png" id="13_evnnp"]
[ext_resource type="Texture2D" uid="uid://cvalstby0pdu1" path="res://assets/UI/tools-btn.png" id="14_hni0w"]
[ext_resource type="Texture2D" uid="uid://b810rbfrnlq87" path="res://assets/UI/close-btn.png" id="15_5wsmn"]

[node name="UILayer" type="CanvasLayer"]
layer = 10
script = ExtResource("1_nbl3c")
pause_texture = ExtResource("11_tqcr1")
play_texture = ExtResource("3_hhtea")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
texture = ExtResource("13_evnnp")

[node name="GameHUD" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_namiw")
full_heart = ExtResource("2_p1e30")
empty_heart = ExtResource("4_1xo4o")

[node name="HUDContainer" type="HBoxContainer" parent="GameHUD"]
z_index = 10
custom_minimum_size = Vector2(275, 50)
layout_mode = 2
offset_left = 416.5
offset_top = 15.0
offset_right = 703.5
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="Hearts" type="HBoxContainer" parent="GameHUD/HUDContainer"]
layout_mode = 2

[node name="Heart1" type="TextureRect" parent="GameHUD/HUDContainer"]
visible = false
z_index = 2
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
texture = ExtResource("2_p1e30")
expand_mode = 1
stretch_mode = 5

[node name="Heart2" type="TextureRect" parent="GameHUD/HUDContainer"]
visible = false
z_index = 2
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
texture = ExtResource("2_p1e30")
expand_mode = 1
stretch_mode = 5

[node name="Heart3" type="TextureRect" parent="GameHUD/HUDContainer"]
visible = false
z_index = 2
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
texture = ExtResource("2_p1e30")
expand_mode = 1
stretch_mode = 5

[node name="Spacer" type="Control" parent="GameHUD/HUDContainer"]
z_index = 2
custom_minimum_size = Vector2(38, 0)
layout_mode = 2

[node name="TimerLabel" type="Label" parent="GameHUD/HUDContainer"]
z_index = 2
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("5_1xo4o")
theme_override_font_sizes/font_size = 49
text = "03:00"
horizontal_alignment = 1

[node name="MessageTexture" type="TextureRect" parent="GameHUD"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 4.0
offset_right = -16.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_6a45y")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="GameHUD/MessageTexture"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 192.0
offset_top = 202.0
offset_right = -191.0
offset_bottom = -326.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_1i1xb")

[node name="BtnHelp" type="TextureButton" parent="GameHUD/MessageTexture"]
visible = false
layout_mode = 0
offset_left = 450.5
offset_top = 413.0
offset_right = 701.5
offset_bottom = 492.0
texture_normal = ExtResource("8_bhogs")
texture_pressed = ExtResource("9_tqcr1")

[node name="Label" type="Label" parent="GameHUD/MessageTexture/BtnHelp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -15.0
offset_right = 78.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Endulzarlo..."
label_settings = ExtResource("10_hhtea")

[node name="PauseBtn" type="TextureButton" parent="."]
process_mode = 3
offset_left = 1069.0
offset_top = 27.0
offset_right = 1118.0
offset_bottom = 76.0
texture_normal = ExtResource("11_tqcr1")

[node name="ToolsBtn" type="TextureButton" parent="."]
process_mode = 3
offset_left = 36.0
offset_top = 27.0
offset_right = 112.0
offset_bottom = 98.0
scale = Vector2(0.65, 0.65)
texture_normal = ExtResource("14_hni0w")

[node name="EncyclopediaUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="EncyclopediaUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TabContainer" type="TabContainer" parent="EncyclopediaUI/Panel"]
process_mode = 2
layout_mode = 0
offset_top = 100.0
offset_right = 1154.0
offset_bottom = 648.0
mouse_filter = 2
theme_override_fonts/font = ExtResource("5_1xo4o")
current_tab = 0

[node name="IngredientsTab" type="ScrollContainer" parent="EncyclopediaUI/Panel/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="EncyclopediaUI/Panel/TabContainer/IngredientsTab"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="CharactersTab" type="ScrollContainer" parent="EncyclopediaUI/Panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="EncyclopediaUI/Panel/TabContainer/CharactersTab"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30

[node name="VBoxContainer" type="VBoxContainer" parent="EncyclopediaUI/Panel/TabContainer/CharactersTab/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="CloseBtn" type="TextureButton" parent="EncyclopediaUI"]
process_mode = 2
layout_mode = 0
offset_left = 1048.0
offset_top = 24.0
offset_right = 1124.0
offset_bottom = 95.0
texture_normal = ExtResource("15_5wsmn")

[connection signal="pressed" from="GameHUD/MessageTexture/BtnHelp" to="." method="_on_btn_help_pressed"]
[connection signal="pressed" from="PauseBtn" to="." method="_on_pause_btn_pressed"]
[connection signal="pressed" from="ToolsBtn" to="." method="_on_tools_btn_pressed"]
[connection signal="pressed" from="EncyclopediaUI/CloseBtn" to="." method="_on_close_btn_pressed"]
